# sliding-window-NIST-ocr

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
custom_datasets/: 8.json  errores_secuencial.json  failed-20260713_191525.json  failed-20260713_195248.json  fallos-del-7.json  fallos-test.json  mnist-train-2000.json
evaluations/eval_20260711_122923/: config.json  status.json
evaluations/eval_20260711_122939/: status.json
evaluations/eval_20260711_123543/: config.json  status.json
evaluations/eval_20260711_123758/: config.json  status.json
evaluations/eval_20260711_125326/: config.json  status.json
evaluations/eval_20260711_125905/: config.json  status.json
evaluations/eval_20260711_133159/: config.json  status.json
evaluations/eval_20260711_141852/: config.json  status.json
evaluations/eval_20260711_161658/: config.json  status.json
evaluations/eval_20260711_181959/: config.json  status.json
evaluations/eval_20260711_190716/: config.json  status.json
evaluations/eval_20260711_211456/: config.json  status.json
evaluations/eval_20260711_212959/: config.json  status.json
evaluations/eval_20260711_220102/: config.json  status.json
evaluations/eval_20260711_230952/: config.json  status.json
evaluations/eval_20260712_081229/: config.json  status.json
scripts/: run_webapp.py
tests/: conftest.py  test_api.py  test_api_evaluation.py  test_custom_datasets.py  test_datasets.py  test_evaluation.py  test_features.py  test_model.py  test_models.py  test_registry.py  test_strokes.py  test_training.py  test_validation.py
(+227 files in other folders)
