[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "swnist"
version = "0.1.0"
description = "Sliding-window NIST/MNIST OCR: dimensionador (CNN) + secuenciador (RNN retroalimentada)"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.13",
    "torchvision>=0.28",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "numpy>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "httpx>=0.27",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
